@@ -1,7 +1,6 @@
 .login 
 {
 	width: 100%;
-	height: 100%;
 }
 .loginContainer 
 {
@@ -92,8 +91,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	z-index: 122234;
 	filter: blur(5px);
 }
