@@ -2,16 +2,34 @@
 
 require_once("../Controllers/controller.php");
 require_once("../Views/alertView.php");
-
-class AlertController extends Controller 
+require_once("../Models/alertModel.php");
+/**
+ * This class is a set up a bit different since we're not extending on View inside alertView.
+ */
+class AlertController  
 {
+	private $view; 
+	private $model;
+
 	public function __construct() 
 	{
 		$this->view = new AlertView();
+		$this->model = new AlertModel(); 
 	}
 
 	public function register() 
 	{	
+		$modelOutput = $this->model->execute();
+
+		// Checking if the modelOutput contains a alertMessage
+		if (isset($modelOutput["alertMessage"])) 
+		{
+			// Recreating the view with the given message and message type
+			$this->view = new AlertView($modelOutput["alertType"], $modelOutput["alertMessage"]);
+		}
+
+		logDebug("AlertController modelOutput = " . var_export($modelOutput, true));
+
 		// making the response array and returning it
 		$response = ["view" => $this->view->getView()];
 		
@@ -22,7 +40,7 @@ class AlertController extends Controller
 
 $controller = new AlertController();
 $response = $controller->register();
-$objectsToRemove = [".alert"];
+$objectsToRemove = [".alert", ".login"];
 $response["objectsToRemove"] = $objectsToRemove;
 echo json_encode($response);
 ?>
