@@ -7,13 +7,15 @@ class AlertView
 {
 	static private string $alertView = "";
 
-	public function _construct($alertType = "", $alertMessage = "") 
+	public function __construct($alertType = "", $alertMessage = "") 
 	{
+		logDebug("alertView construct: $alertType, $alertMessage");
 		$this::$alertView = $this->createView($alertType, $alertMessage);
 	}
 
 	public function createView($alertType = "", $alertMessage = "") 
 	{
+		logDebug("alertview createview =  $alertType, $alertMessage");
 		if ($alertMessage == "") 
 		{
 			$alertMessage = "A error occured, please inform a administrator";
@@ -40,6 +42,7 @@ class AlertView
 		// if there is not yet a view object or the view inside it is empty we do createView()
 		if ($this::$alertView == "") 
 		{
+			logDebug("this is called");
 			$this::$alertView = $this->createView();
 		}
 
